--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "SmashingBot",
+  "name": "AlfredBot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
@@ -10,7 +10,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
