--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,20 +1,23 @@
 version: 2.1
 
-orbs:
-  node: circleci/node@4.1
-
 jobs:
   deploy:
     docker:
-      - image: cimg/node:15.1
+      - image: google/cloud-sdk
+
+    working_directory: ~/repo
 
     steps:
       - checkout
-      - node/install-packages
       - run:
-          command: echo "test"
-
-workflows:
-  deploy-to-gcp: 
-    jobs:
-      - deploy
+          name: Copy across app.yaml config
+          command: ./app.yaml.sh > ./app.yaml
+      - run:
+          name: Set up gcloud config
+          command: |
+            echo $GCLOUD_KEY | base64 --decode | gcloud auth activate-service-account --key-file=-
+            gcloud --quiet config set project ${GCLOUD_PROJECT}
+            gcloud --quiet config set compute/zone ${GCLOUD_ZONE}
+      - deploy:
+          name: Deploying to App Engine
+          command: gcloud app deploy app.yaml
