--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,3 +21,8 @@ jobs:
       - deploy:
           name: Deploying to App Engine
           command: gcloud app deploy app.yaml
+
+workflows:
+  deploy-to-gcp:
+    jobs:
+      - deploy
