--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
+    "fs": "0.0.1-security",
     "twit": "^2.2.11"
   },
   "repository": {
